fix check label()  + labels traslation + add label to table()

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "assemblerdata.h": "c"
+        "assemblerdata.h": "c",
+        "pass.h": "c",
+        "symbol.h": "c"
     }
 }
