Sorting files to directories

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "aarch64-linux-gnu-gcc - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/parallels/Desktop/System Programming Lab/mmn14/my_project/assembler",
-            "args": ["/home/parallels/Desktop/System Programming Lab/mmn14/my_project/file1.as"],
+            "program": "/home/parallels/Desktop/System Programming Lab/mmn14/my_project/bin/assembler",
+            "args": ["/home/parallels/Desktop/System Programming Lab/mmn14/my_project/files/file1.as","/home/parallels/Desktop/System Programming Lab/mmn14/my_project/files/file2.as"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
