--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,10 @@
         "string.h": "c",
         "ctype.h": "c",
         "errorcodes.h": "c"
-    }
+    },
+    "spellright.language": [
+        "en"
+    ],
+    "spellright.addToSystemDictionary": true,
+    "cSpell.enabled": false
 }
