--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "stdio.h": "c",
         "string.h": "c",
         "ctype.h": "c",
-        "errorcodes.h": "c"
+        "errorcodes.h": "c",
+        "cmath": "c",
+        "*.tcc": "c"
     },
     "spellright.language": [
         "en"
